SECURITY: Remove exposed private keys and add to .gitignore
- Removed private key 0x27cf0a1b8782929ae1369bd6c1c60c00c1f4bf219bf5f7d5432fc7af45403fe7 from:
  - test-bot-v2.json
  - data/bots.json
  - data/bots.json.backup
- Added sensitive data patterns to .gitignore
- Replaced with placeholder YOUR_PRIVATE_KEY_HERE

--- a/trading-bot-api/.gitignore
+++ b/trading-bot-api/.gitignore
@@ -95,3 +95,10 @@ Thumbs.db
 # Logs
 logs
 *.log
+
+# Sensitive data files
+data/bots.json
+data/bots.json.backup
+test-bot-*.json
+**/private-keys/**
+**/*private-key*
