Add test-bot-template.json and update .gitignore pattern
- Added test-bot-template.json with secure placeholders
- Updated .gitignore to allow template files while blocking versioned test files

--- a/trading-bot-api/.gitignore
+++ b/trading-bot-api/.gitignore
@@ -99,6 +99,6 @@ logs
 # Sensitive data files
 data/bots.json
 data/bots.json.backup
-test-bot-*.json
+test-bot-v*.json
 **/private-keys/**
 **/*private-key*
