--- a/trading-bot-api/render.yaml
+++ b/trading-bot-api/render.yaml
@@ -3,6 +3,7 @@ services:
     name: trading-bot-api
     env: node
     plan: starter
+    rootDir: trading-bot-api
     buildCommand: npm install
     startCommand: node enhanced-server.js
     envVars:
