--- a/trading-bot-frontend/vercel.json
+++ b/trading-bot-frontend/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run build:vercel",
   "outputDirectory": "build",
   "framework": "create-react-app"
 }
