Fix: Add React app public directory and update gitignore
- Added trading-bot-frontend/public/ directory with index.html
- Updated root .gitignore to allow React app public directories
- Fixed Vercel deployment configuration

--- a/.gitignore
+++ b/.gitignore
@@ -96,7 +96,8 @@ dist
 
 # Gatsby files
 .cache/
-public
+# Note: Commented out 'public' to allow React app public directories
+# public
 
 # Storybook build outputs
 .out
